kubernetes(aws)/rng.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"rng"},"name":"rng","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"rng"}},"template":{"metadata":{"labels":{"app":"rng"}},"spec":{"containers":[{"image":"dockercoins/rng:v0.1","name":"rng"}]}}}}
  creationTimestamp: "2022-10-19T11:51:37Z"
  generation: 2
  labels:
    app: rng
  name: rng
  namespace: default
  resourceVersion: "1588235"
  uid: fbe08ef2-fe46-45df-b86a-891fd8a40468
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rng
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rng
    spec:
      containers:
      - image: dockercoins/rng:v0.1
        imagePullPolicy: IfNotPresent
        name: rng
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-10-19T11:51:43Z"
    lastUpdateTime: "2022-10-19T11:51:43Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-10-19T11:51:37Z"
    lastUpdateTime: "2022-10-19T11:51:43Z"
    message: ReplicaSet "rng-576d96c88c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
