kubernetes(aws)/web.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: "2022-10-20T13:20:52Z"
  generation: 1
  labels:
    app: web
  name: web
  namespace: default
  resourceVersion: "1697110"
  uid: fc019619-8e81-47ac-9396-dc29d872105f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
